# mcp_aiassistant_gcp

./: .gitignore  client_deprecated.py  commands.sh  database_mcp_server.py  database_mcp_serverv2.py  gemini_client.py  pyproject.toml  requirements.txt  setup_database_ps.py  setup_database_psv2.py  setup_database_sqlite.py
